--- a/DockerFile
+++ b/DockerFile
@@ -1,5 +1,4 @@
-FROM openjdk:8-jdk-alpine
+FROM adoptopenjdk/openjdk11:alpine-jre
 VOLUME /tmp
-ARG JAR_FILE
 COPY target/*.jar app.jar
 ENTRYPOINT ["java","-jar","/app.jar"]
